Коррекция пространств имён

--- a/UI/WebStore/Views/Cart/Partial/_Checkout.cshtml
+++ b/UI/WebStore/Views/Cart/Partial/_Checkout.cshtml
@@ -1,4 +1,5 @@
-﻿@model OrderViewModel
+﻿@using WebStore.Domain.ViewModels
+@model OrderViewModel
 
 <form asp-action="Checkout" asp-antiforgery="true">
     <div class="row">
