--- a/UI/WebStore/Views/Employees/Delete.cshtml
+++ b/UI/WebStore/Views/Employees/Delete.cshtml
@@ -1,4 +1,5 @@
-﻿@model WebStore.ViewModels.EmployeesViewModel
+﻿@using WebStore.Domain.ViewModels
+@model             EmployeesViewModel
 @{
     ViewData["Title"] = "Delete";
 }
