--- a/UI/WebStore/Views/Employees/Edit.cshtml
+++ b/UI/WebStore/Views/Employees/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model EmployeesViewModel
+﻿@using WebStore.Domain.ViewModels
+@model EmployeesViewModel
 
 @{
     ViewData["Title"] = $"Редактирование {Model.ShortName}";
