--- a/UI/WebStore/Views/Shared/Partial/_MainMenu.cshtml
+++ b/UI/WebStore/Views/Shared/Partial/_MainMenu.cshtml
@@ -11,9 +11,8 @@
                 <li><a href="blog.html">Список блогов</a></li>
                 <li><a href="blog-single.html">Блог магазина</a></li>
             </ul>
-        </li> 
-        <li><a href="404.html">404</a></li>
-        <li><a href="contact-us.html">Контакты</a></li>
+        </li>         
         <li><a asp-controller="Employees" asp-action="Index">Сотрудники</a></li>
+        <li><a asp-controller="WebAPI" asp-action="Index">WebAPI</a></li>
     </ul>
 </div>
